--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup bun
         uses: oven-sh/setup-bun@v2
       - name: Build
-        run: bun build.ts
+        run: bun install && bun build.ts
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
